@@ -1,3 +1,4 @@
+- usbkbd is dead, using usbhid instead
 - allow passing suppl=0 to disable "additional installation media" question
 - drakx-in-chroot:
   o fix using remote repositories
