@@ -1,3 +1,5 @@
+- usbkbd is dead, using usbhid instead
+
 1.30:
 - add back "ide-generic" support (incorrectly removed in 1.17), the
   module that we want to avoid is "ide-pci-generic" (previously "generic"),
